--- a/hw1/pom.xml
+++ b/hw1/pom.xml
@@ -67,11 +67,31 @@
                         </manifest>
                     </archive>
                 </configuration>
+
+            </plugin>
+
+            <plugin>
+                <groupId>com.github.dingxin</groupId>
+                <artifactId>proguard-maven-plugin</artifactId>
+                <version>1.0.3</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>proguard</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <injar>${project.name}.jar</injar>
+                    <outjar>${project.name}-small.jar</outjar>
+                    <libs>
+                        <lib>src/main/resources/lib/rt.jar</lib>
+                        <lib>/Library/Java/JavaVirtualMachines/jdk-9.0.4.jdk/Contents/Home/jmods/java.base.jmod(!**.jar;!module-info.class)</lib>
+                    </libs>
+                </configuration>
             </plugin>
 
         </plugins>
-
     </build>
-
-
 </project>
